<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity2">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BF1EBEB">

    <EditText
        android:id="@+id/name"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/name"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/college"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/college"
        android:ems="10"
        android:hint="@string/college"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/semester"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/college"
        android:ems="10"
        android:hint="@string/semester"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/branch" />

    <EditText
        android:id="@+id/rollno"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/college"
        android:ems="10"
        android:hint="@string/rollno"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/semester" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/college"
        android:ems="10"
        android:hint="@string/branch"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/college" />

    <EditText
        android:id="@+id/email_id_register"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rollno" />

    <EditText
        android:id="@+id/passsword_register"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id_register" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/button"
        android:onClick="user_registration"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/website" />

    <EditText
        android:id="@+id/website"
        android:layout_width="347dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/round_edittext"
        android:drawableLeft="@drawable/web"
        android:ems="10"
        android:hint="College website(www.college.com)"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passsword_register" />

</android.support.constraint.ConstraintLayout>

</ScrollView>